# NDI-receiver

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  Receiver.cpp  Receiver.h  Thread.cpp  Thread.h
core/datamodels/: CMakeLists.txt  frame.h  source.h
core/util/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Thread.cpp  Thread.h
core/wrappers/: CMakeLists.txt  NdiConnection.cpp  NdiConnection.h  NdiSourceFinder.cpp  NdiSourceFinder.h
src/: BasicCmakeSetup.cpp  BasicCmakeSetup.h  CMakeLists.txt
tools/: CMakeLists.txt
tools/NDI-Console/: CMakeLists.txt  ReceiverAsync.cpp  ReceiverAsync.h  conanfile.txt  main.cpp
